--- a/client/templating/britto.html
+++ b/client/templating/britto.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Britto - Blogging made better</title>
+  <title>Anything Joes</title>
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
